# freecad-experiments

./: .gitignore  README.org
a7/: Cargo.toml  pyproject.toml
a7/primitives/: Cargo.toml
a7/primitives/src/: geometry.rs  lib.rs  types.rs
a7/py_macro/: a7.py
a7/src/: lib.rs
boxes/boxes-core/: Cargo.toml
boxes/boxes-geo/: Cargo.toml
boxes/boxes-geo/src/: geometry.rs
boxes/boxes-py/: Cargo.toml  pyproject.toml
boxes/primitives/: Cargo.toml
boxes/primitives/src/: product.rs
boxes/py_macro/: boxes.py
fc_house/: Cargo.toml  pyproject.toml
fc_house/src/: lib.rs
iris/: Cargo.toml  pyproject.toml
iris/py_macro/: iris.py
iris/src/: lib.rs
leroy/: Cargo.toml  pyproject.toml
leroy/leroy/: Cargo.toml
leroy/leroy/src/: builder.rs  lib.rs  types.rs
leroy/logo/: Cargo.toml
leroy/logo/src/: lib.rs  logo.rs
leroy/primitives/: Cargo.toml
leroy/primitives/src/: datatypes.rs  geometry.rs  lib.rs
leroy/py_macro/: leroy.py
pump/: Cargo.toml  pyproject.toml
pump/py_macro/: pump.py
pump/src/: geometry.rs  lib.rs  types.rs
roy/: Cargo.toml  pyproject.toml
roy/cli/: Cargo.toml
roy/cli/src/: main.rs
roy/cli/src/init/: init.rs
roy/db/: Cargo.toml
roy/db/src/: lib.rs  queries.rs  schema.rs
roy/primitives/: Cargo.toml
roy/primitives/src/: geometry.rs  lib.rs  price.rs  types.rs
roy/py_macro/: roy.py
roy/src/: diff.rs  lib.rs
shard/: Cargo.toml  pyproject.toml
shard/primitives/: Cargo.toml
shard/primitives/src/: geometry.rs  lib.rs  types.rs
shard/py_macro/: shard.py
shard/src/: lib.rs
