# /home/emporas/repos/freecad/rust/a7/Cargo.toml
[workspace]
members  = [".", "primitives"]
resolver = "2"

[package]
name    = "a7"
version = "0.1.0"
edition = "2021"

[lib]
name       = "a7"
crate-type = ["cdylib"]

[dependencies]
primitives = { path = "primitives" }
pyo3       = { version = "0.25.0", features = ["extension-module"] }

[profile.release]
lto           = true
opt-level     = 3
codegen-units = 1
