# /home/emporas/repos/freecad/rust/roy/Cargo.toml
[workspace]
members  = [".", "db", "cli" , "primitives"]
resolver = "2"

[package]
name = "roy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "roy"
crate-type = ["cdylib"]

[dependencies]
db       = { path = "db" }
primitives = { path = "primitives" }
pyo3     = { version = "0.25.0", features = ["extension-module"] }
nalgebra = "0.33"

[profile.release]
lto           = true
opt-level     = 3
codegen-units = 1
