# /home/emporas/repos/freecad/rust/a7/primitives/Cargo.toml
[package]
name    = "primitives"
version = "0.1.0"
edition = "2021"

[lib]
name       = "primitives"
crate-type = ["rlib"]          # plain library, not a cdylib

[dependencies]
pyo3 = { version = "0.25.0" }  # no extension-module feature here
