# /home/emporas/repos/freecad/rust/roy/cli/Cargo.toml
[package]
name    = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
db = { path = "../db" }
primitives = { path = "../primitives" }
clap = "4.5.23"
log = "0.4"
anyhow = "1.0.95"
clap-verbosity-flag = "3.0.2"
console = "0.16.2"
env_logger = "0.11.8"
thiserror = "2.0.17"
directories = "6.0.0"
rand         = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
